[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["JM <javier.martinez@codurance.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
mutmut = "^2.4.4"
pytest = "^7.4.2"
mypy = "^1.6.0"
flake8 = "^6.1.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
mypy_path = "calculator"
ignore_missing_imports = true
no_namespace_packages = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true